# CBA

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  link.ld  makeGBA.ps1  makeGBA.sh
extras/: gendispatch.py  instructionset.yaml
headers/: cpu.hpp  memory.hpp
include/: arm.hpp  cpu.hpp
src/: arm.cpp  cpu.cpp  cpu.hpp  emulator.cpp  kernel.s  memory.cpp  memory.hpp  test.s  thumb.cpp
